@@ -5,6 +5,7 @@ Version 0.3.0~dev
 	* Call user action callback with progress information and
 	  action information, closes: #5365.
 	* Add videoparser_extract action, closes: #5365.
+	* Fix duplicate stdout/stderr output returned by command.
 
 Version 0.2.0 Released on 2011/11/22
 
